Renames the web listener and replaces the XML configuration with annotation

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,9 +3,5 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>Managed Web Application</display-name>
-  
-  <listener>
-    <listener-class>rogeriogentil.managed.webapp.listener.HelloContextListener</listener-class>
-  </listener>
+  <display-name>StarMX Managed Web Application</display-name>
 </web-app>
